// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SplitButton renders correctly with disabled 1`] = `
<div
  className="monday-style-split-button monday-style-split-button--kind-primary monday-style-split-button--color-primary monday-style-split-button--disabled"
  role="button"
>
  <button
    aria-disabled={true}
    className="monday-style-split-button__main-button monday-style-button monday-style-button--size-medium monday-style-button--kind-primary monday-style-button--color-primary monday-style-button--right-flat monday-style-button--prevent-click-animation monday-style-button--disabled"
    data-testid="button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  />
  <div
    className="monday-style-split-button__secondary-button-wrapper"
  >
    <span
      className=""
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-disabled={true}
        aria-expanded={false}
        aria-haspopup={true}
        aria-label="additional actions"
        className="monday-style-split-button__secondary-button monday-style-button monday-style-button--size-medium monday-style-button--kind-primary monday-style-button--color-primary monday-style-button--left-flat monday-style-button--prevent-click-animation monday-style-button--no-side-padding monday-style-button--disabled"
        data-testid="button"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <div
          className="monday-style-split-button__secondary-button-icon-wrapper"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              clipRule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`SplitButton renders correctly with medium dialog padding size 1`] = `
<div
  className="monday-style-split-button monday-style-split-button--kind-primary monday-style-split-button--color-primary"
  role="button"
>
  <button
    aria-disabled={false}
    className="monday-style-split-button__main-button monday-style-button monday-style-button--size-medium monday-style-button--kind-primary monday-style-button--color-primary monday-style-button--right-flat monday-style-button--prevent-click-animation"
    data-testid="button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  />
  <div
    className="monday-style-split-button__secondary-button-wrapper"
  >
    <span
      className=""
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-disabled={false}
        aria-expanded={false}
        aria-haspopup={true}
        aria-label="additional actions"
        className="monday-style-split-button__secondary-button monday-style-button monday-style-button--size-medium monday-style-button--kind-primary monday-style-button--color-primary monday-style-button--left-flat monday-style-button--prevent-click-animation monday-style-button--no-side-padding"
        data-testid="button"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <div
          className="monday-style-split-button__secondary-button-icon-wrapper"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              clipRule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`SplitButton renders correctly with only required props 1`] = `
<div
  className="monday-style-split-button monday-style-split-button--kind-primary monday-style-split-button--color-primary"
  role="button"
>
  <button
    aria-disabled={false}
    className="monday-style-split-button__main-button monday-style-button monday-style-button--size-medium monday-style-button--kind-primary monday-style-button--color-primary monday-style-button--right-flat monday-style-button--prevent-click-animation"
    data-testid="button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  />
  <div
    className="monday-style-split-button__secondary-button-wrapper"
  >
    <span
      className=""
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-disabled={false}
        aria-expanded={false}
        aria-haspopup={true}
        aria-label="additional actions"
        className="monday-style-split-button__secondary-button monday-style-button monday-style-button--size-medium monday-style-button--kind-primary monday-style-button--color-primary monday-style-button--left-flat monday-style-button--prevent-click-animation monday-style-button--no-side-padding"
        data-testid="button"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <div
          className="monday-style-split-button__secondary-button-icon-wrapper"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              clipRule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`SplitButton renders correctly with secondary position 1`] = `
<div
  className="monday-style-split-button monday-style-split-button--kind-primary monday-style-split-button--color-primary"
  role="button"
>
  <button
    aria-disabled={false}
    className="monday-style-split-button__main-button monday-style-button monday-style-button--size-medium monday-style-button--kind-primary monday-style-button--color-primary monday-style-button--right-flat monday-style-button--prevent-click-animation"
    data-testid="button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  />
  <div
    className="monday-style-split-button__secondary-button-wrapper"
  >
    <span
      className=""
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-disabled={false}
        aria-expanded={false}
        aria-haspopup={true}
        aria-label="additional actions"
        className="monday-style-split-button__secondary-button monday-style-button monday-style-button--size-medium monday-style-button--kind-primary monday-style-button--color-primary monday-style-button--left-flat monday-style-button--prevent-click-animation monday-style-button--no-side-padding"
        data-testid="button"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <div
          className="monday-style-split-button__secondary-button-icon-wrapper"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              clipRule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`SplitButton renders correctly with tertiary button 1`] = `
<div
  className="monday-style-split-button monday-style-split-button--kind-tertiary monday-style-split-button--color-primary"
  role="button"
>
  <button
    aria-disabled={false}
    className="monday-style-split-button__main-button monday-style-button monday-style-button--size-medium monday-style-button--kind-tertiary monday-style-button--color-primary monday-style-button--right-flat monday-style-button--prevent-click-animation"
    data-testid="button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  />
  <div
    className="monday-style-split-button__secondary-button-wrapper"
  >
    <span
      className=""
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-disabled={false}
        aria-expanded={false}
        aria-haspopup={true}
        aria-label="additional actions"
        className="monday-style-split-button__secondary-button monday-style-button monday-style-button--size-medium monday-style-button--kind-tertiary monday-style-button--color-primary monday-style-button--left-flat monday-style-button--prevent-click-animation monday-style-button--no-side-padding"
        data-testid="button"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <div
          className="monday-style-split-button__secondary-button-icon-wrapper"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              clipRule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`SplitButton renders correctly with zIndex 1`] = `
<div
  className="monday-style-split-button monday-style-split-button--kind-primary monday-style-split-button--color-primary"
  role="button"
>
  <button
    aria-disabled={false}
    className="monday-style-split-button__main-button monday-style-button monday-style-button--size-medium monday-style-button--kind-primary monday-style-button--color-primary monday-style-button--right-flat monday-style-button--prevent-click-animation"
    data-testid="button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  />
  <div
    className="monday-style-split-button__secondary-button-wrapper"
  >
    <span
      className=""
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-disabled={false}
        aria-expanded={false}
        aria-haspopup={true}
        aria-label="additional actions"
        className="monday-style-split-button__secondary-button monday-style-button monday-style-button--size-medium monday-style-button--kind-primary monday-style-button--color-primary monday-style-button--left-flat monday-style-button--prevent-click-animation monday-style-button--no-side-padding"
        data-testid="button"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <div
          className="monday-style-split-button__secondary-button-icon-wrapper"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              clipRule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </span>
  </div>
</div>
`;
